# Nate

./: .env.example  .gitignore  .mcp.json  BESTAND.md  CLAUDE.md  Dockerfile  INSTALLIEREN.bat  JARVIS STARTEN.bat  JARVIS-iPhone.html  MCP-STATUS.md  README.md  angebote.html  docker-compose.yml  einrichten.py  index.html  jarvis_gui.py  jarvis_starten.bat  jarvis_web.py  main.py  pyproject.toml  render.yaml  requirements.txt
graphify/: .gitignore  README.md  pyproject.toml
graphify/graphify/: __init__.py  cli.py  graph.py  mcp_server.py  scanner.py
graphify/tests/: test_graphify.py
jarvis/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Install-Jarvis-Service.ps1  JARVIS-24-7-Einrichten.cmd  JARVIS-ClawCode-Verbinden.cmd  JARVIS-Handy.cmd  JARVIS-Nur-OpenRouter.cmd  JARVIS-PC-Einrichten.cmd  JARVIS-Starten.cmd  README.md  SECURITY.md  Start-Jarvis.ps1  TEAM-LOG.md  __init__.py  __main__.py  config.example.yaml  config.py  kernel.py  pyproject.toml  requirements.txt  run.py
jarvis/.claude-plugin/: plugin.json
jarvis/agents/: __init__.py  base.py  oi-hands.md  registry.py
jarvis/api/: app.py
jarvis/automation/: __init__.py  scheduler.py
jarvis/commands/: jarvis.md
jarvis/company/: __init__.py  org.py  org.yaml
jarvis/core/: __init__.py  agents.py  approvals.py  autopilot.py  brain.py  browser_auto.py  claude_client.py  code_agent.py  commands.py  company.py  conversation.py  desktop.py  errors.py  events.py  identity.py  netinfo.py  ollama_client.py  openrouter.py  orchestrator.py  plugins.py  progression.py  security.py  skills.py  tools.py  voice.py  workforce.py  zugaenge.py
jarvis/dashboard/: app.py  jarvis.html  jarvis_anleitung.html  jarvis_architektur.html  jarvis_command_center.html  jarvis_live_ticker.html  mission-control.html
jarvis/dashboard/static/: autopilot.html  fable.js  gehirn.html  handy.html  index.html  kurzbefehle.html  manifest.webmanifest  mitarbeiter.html  schluessel.html  sicherheit.html  start.html  style.css  sw.js  werkzeuge.html  zugaenge.html
jarvis/desktop/: Install-OpenInterpreter.bat  JARVIS.py  LIESMICH.md  Start-JARVIS.bat  mission-control.html
jarvis/docker/: Dockerfile  docker-compose.yml
jarvis/docs/: ENTERPRISE_LIVE_TICKER.md  JARVIS_AGENT.md  JARVIS_SHOPIFY.md  JARVIS_ULTRA.md  STABLE_RELEASE.md  SYSTEMARCHITEKTUR.md  agents.md  api.md  architecture.md  configuration.md  plugins.md  security.md  voice.md
jarvis/jarvis_ultra/: __init__.py  catalog.py  live_ticker.py  mega_org.py
jarvis/llm/: __init__.py  provider.py
jarvis/memory/: __init__.py  long_term.py  manager.py  short_term.py  vector.py
jarvis/open_jarvis/agent/: __init__.py  __main__.py  activate.py  agent.py  claude_provider.py  models.py  planner.py  server.py  shop_builder.py  shopify_client.py  system.py  tools.py
jarvis/open_jarvis/app/: main.py
jarvis/open_jarvis/commands/: __init__.py  groq_router.py
jarvis/open_jarvis/config/: schema.py
jarvis/open_jarvis/enterprise/: __init__.py  __main__.py  catalog.py  live_ticker.py  workforce.py
jarvis/open_jarvis/evaluation/: haftalik_guncelleme.py
jarvis/open_jarvis/integrations/: url_safety.py
jarvis/open_jarvis/memory/: __init__.py  controls.py  memory_habits.py  memory_notes.py  memory_preferences.py  memory_store.py  privacy_mode.py
jarvis/open_jarvis/plugins/: jarvis_plugin_state.json  loader.py
jarvis/open_jarvis/providers/: __init__.py  base.py  (+3 more)
jarvis/plugins/: README.md  __init__.py  base.py  einheiten.py  loader.py  manager.py  notizen.py  passwort.py  rechner.py  system_info.py  zeit.py  zufall.py
jarvis/scripts/: install.py
jarvis/skills/: __init__.py  base.py  builtin.py
jarvis/speech/: __init__.py  elevenlabs_tts.py  speech_to_text.py  text_to_speech.py
jarvis/system/: __init__.py  app_control.py
jarvis/tests/: conftest.py  test_agent_activate.py  test_agent_core.py  test_agent_models.py  test_agent_server.py  test_agent_shop_builder.py  test_agent_shopify.py  test_agent_system.py  test_agents.py  test_api.py  test_browser.py  test_core.py  test_dashboard.py  test_desktop.py  test_enterprise_capabilities.py  test_enterprise_live_ticker.py  test_enterprise_plugins.py  test_enterprise_workforce.py  test_example_plugins.py  test_gui.py  test_integrations.py  test_jarvis_ultra.py  test_llm.py  test_memory.py  test_memory_privacy_controls.py  test_plugins.py  test_process_runner.py  test_progression.py  test_project_quality_files.py  test_provider_privacy.py  test_provider_system.py  test_training.py  test_url_safety.py  test_vision.py  test_voice.py  test_weekly_update_safety.py
jarvis/training/: README.md  scrub.py
jarvis/utils/: __init__.py  config_loader.py  latency.py  logger.py  markdown_loader.py  secrets.py  sentences.py
jarvis/vision/: __init__.py
jarvis/voice/: __init__.py  pipeline.py  satellite.py  stt.py  tts.py  wakeword.py
jarvis/web/: __init__.py
jarvis/workflows/: __init__.py  engine.py
platform-backend/: .dockerignore  .env.example  CUTOVER.md  DEPLOY-RENDER.md  Dockerfile  INSTALL-LOG.md  LICENSES.md  README.md  RUNBOOK.md  SECURITY-REVIEW.md  docker-compose.dev.yml  docker-compose.yml  docs-phase9-container.md  pyproject.toml  requirements-dev.txt  requirements.txt
platform-backend/app/: __init__.py  auth.py  config.py  db.py  main.py  migrate.py  models_catalog.py  plans.py
platform-backend/db-init/: 01-app-role.sh
platform-backend/litellm/: config.yaml
platform-backend/migrations/: 000_roles.sql  001_init.sql  002_seed_plans.sql  003_grants.sql  004_agents.sql
platform-backend/static/: index.html
platform-backend/tests/: test_agents.py  test_agents_integration.py  test_agents_schema.py  test_api.py  test_auth.py  test_automation.py  test_backup.py  test_cache_metrics.py  test_compute.py  test_config.py  test_container.py  test_endpoints_smoke.py  test_k8s_manifests.py  test_knowledge.py  test_live_services.py  test_loadtest.py  test_local_integration.py  test_mcp.py  test_migration_rls.py  test_models_catalog.py  test_observability.py  test_plans.py  test_platform.py  test_rls_integration.py  test_router.py
(+1079 files in other folders)
