[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai-os"
version = "0.1.0"
description = "JARVIS AI OS — a local, voice-controlled, agent-based personal AI operating system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nate" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Local voice stack (wake word, mic satellite, optional local STT/TTS)
voice = [
    "openwakeword>=0.6",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "websockets>=12.0",
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
]
# Vector memory backends
vector = [
    "chromadb>=0.5",
    "qdrant-client>=1.9",
]
# Cloud/local LLM providers
llm = [
    "anthropic>=0.34",
    "openai>=1.30",
]
# Production datastores
db = [
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]
# Desktop control skills (only used with explicit user approval)
desktop = [
    "pyautogui>=0.9",
    "pytesseract>=0.3",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "playwright>=1.44",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
jarvis = "jarvis.__main__:main"
jarvis-voice = "jarvis.voice.satellite:main"

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
