[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-hyperscale"
version = "1.1.0"
description = "JARVIS HyperScale — lokaler Windows-KI-Agent mit prozeduraler Milliarden-Belegschaft"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "psutil>=5.9",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# PC-Steuerung (Maus/Tastatur/Screenshot) — nur auf einem echten Windows-Desktop:
desktop = [
    "pyautogui>=0.9.54; platform_system == 'Windows'",
    "pillow>=10.0; platform_system == 'Windows'",
]
# Browser-Automatisierung (Playwright; unterstützt auch Linux-Chromium):
browser = ["playwright>=1.40"]
# Entwicklung/Tests:
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
jarvis = "jarvis.run:main"

[tool.setuptools]
packages = ["jarvis", "jarvis.core", "jarvis.dashboard", "jarvis.plugins"]

[tool.setuptools.package-data]
"jarvis.dashboard" = ["static/*"]
