[project]
name = "jarvis-assistant"
version = "1.0.0"
description = "JARVIS - a production-grade, extensible personal AI assistant with multi-agent orchestration, voice, vision, desktop and browser automation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nate", email = "beamswiss@gmail.com" }]
requires-python = ">=3.11"
keywords = ["ai", "assistant", "jarvis", "agents", "llm", "voice", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "watchfiles>=0.22",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.7"]
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "openwakeword>=0.6",
    "piper-tts>=1.2 ; python_version < '3.13'",
]
tts-xtts = ["coqui-tts>=0.24 ; python_version < '3.13'"]
vision = [
    "opencv-python>=4.10",
    "mss>=9.0",
    "pytesseract>=0.3.10",
    "numpy>=1.26",
    "Pillow>=10.3",
]
desktop = [
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
    "pygetwindow>=0.0.9 ; sys_platform == 'win32'",
    "psutil>=5.9",
    "types-PyYAML>=6.0",
    "pypdf>=4.2",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
]
browser = ["playwright>=1.44", "selectolax>=0.3.21"]
vector = ["chromadb>=0.5", "numpy>=1.26"]
langchain = ["langchain-core>=0.2", "langgraph>=0.1"]
dev = [
    "pytest>=8.2",
    "psutil>=5.9",
    "types-PyYAML>=6.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",
]
all = [
    "jarvis-assistant[gui,voice,vision,desktop,browser,vector,langchain]",
]

[project.scripts]
jarvis = "jarvis.__main__:main"

[project.urls]
Repository = "https://github.com/Nate8645er/Nate"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "ASYNC"]
ignore = ["E501", "B008", "B027", "SIM108", "RUF001", "RUF002", "RUF003", "RUF012", "ASYNC109", "ASYNC230", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_ignores = false
exclude = ["build", "dist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/jarvis"]
